Changes in version 1.1 (??? 2006)

- Fixed Linux keyhandling for many keys.

- The aspect ratio has been inverted in the matrix, which means when setting a new aspect ratio
  for cameras, set it to screen.width/screen.height now instead of screen.height/screen.width
  as previously.

- added support for reading/importing binary .x files.

- .x normals now correctly transformed in animations, bounding boxes are
  slightly better transformed, but not yet correct.

- Added possibility to load and save Irrlicht scenes to and from xml files via 
  ISceneManager::saveScene and ISceneManager::loadScene. Note that not all scene nodes are supported
  yet, but most features should already work.

- Bounding box of the Skybox corrected (set to null) 

- The SMaterial structure now supports 4 textures. (Currently ignored by the renderers and their materials.)

- Test scene node renamed to CubeSceneNode.

- Added scene node factories. This is an interface making it possible to dynamicly 
  create scene nodes. To be able to add custom scene nodes to Irrlicht and 
  to make it possible for the scene manager to save and load those external scene nodes, simply 
  implement this interface and register it in you scene manager via ISceneManager::
  registerSceneNodeFactory
  
- Introduced IMeshSceneNode interface with the possibility to set readonly materials to make
  it possible to use the mesh materials directly instead of overriding them. In this way
  it is possible to change the materials a mesh causing all mesh scene nodes 
  referencing this mesh to change too.
  
- Added possibility to load OGRE .mesh files directly, thanks to Christian Stehno who contributet 
  a loader for this.
  
- Added scene node animator factories. This is the same as scene node factories, but for
  scene node animators.
  
- Merged with Irrlicht 1.0 for MacOS

- Added a method getType() to ISceneNodeAnimator.

- There is now a system to serialize and deserialize attributes of scene nodes. In this way